# Ice

./: CMakeLists.txt
Ice/: main.cpp
Ice.xcodeproj/: project.pbxproj
Ice.xcodeproj/project.xcworkspace/xcuserdata/snow.xcuserdatad/: UserInterfaceState.xcuserstate
Ice.xcodeproj/xcuserdata/snow.xcuserdatad/xcschemes/: Ice.xcscheme
Mono/: Ice.cproj  Ice.sln
XCode/Ice.xcodeproj/: project.pbxproj
XCode/Ice.xcodeproj/project.xcworkspace/xcuserdata/snow.xcuserdatad/: UserInterfaceState.xcuserstate
XCode/Ice.xcodeproj/xcuserdata/snow.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: Ice.1  Terra.cpp  Terra.h  main.cpp
